Some styling stuff

--- a/src/about.html
+++ b/src/about.html
@@ -87,18 +87,18 @@
     <!-- component -->
 
     <div class="bg-[#475c7a]">
-      <div class="max-w-xs mx-auto text-white py-10">
-        <div class="text-center">
+      <div class="ml-10 text-white py-10">
+        <div class="text-left">
           <h3 class="text-3xl mb-1">Connect with me</h3>
 
-          <div class="flex justify-center my-10">
-            <div class="flex items-center px-4 py-2 w-44 mx-2">
-              <nav class="list-none -mb-10">
+          <div class="text-left my-10">
+            <div class="flex items-center">
+              <nav class="list-none">
                 <li>
                   <a
                     href="https://github.com/Draculoaf"
                     target="_blank"
-                    class="text-white hover:text-gray-300"
+                    class="text-white hover:text-gray-00"
                     >GitHub</a
                   >
                 </li>
@@ -106,7 +106,7 @@
                   <a
                     href="https://draculoaf.itch.io/"
                     target="_blank"
-                    class="text-white hover:text-gray-300"
+                    class="text-white hover:text-gray-1300"
                     >LinkedIn</a
                   >
                 </li>
