Some responsive stuff

--- a/src/about.html
+++ b/src/about.html
@@ -16,7 +16,7 @@
             jess
           </h1>
 
-          <div class="md:flex space-x-6 hidden text-base pl-3">
+          <div class="md:flex space-x-6 pl-3">
             <p>a short overview all about me</p>
           </div>
         </div>
@@ -25,7 +25,7 @@
       <div
         class="container mx-auto bg-[url(../assets/wp.png)] h-96 rounded-md flex items-center"
       >
-        <div class="sm:ml-20 text-gray-50 text-center sm:text-left">
+        <div class="sm:ml-20 text-gray-50 text-center sm:text-left text-left">
           <h1 class="text-5xl font-bold mb-4">
             Jessica <br />
             Hon
@@ -45,12 +45,12 @@
         <h1 class="text-2xl font-bold text-black mb-10">More about me</h1>
         <div class="grid sm:grid-cols-3 gap-4 grid-cols-2">
           <div>
-            <div class="bg-[#d8737f67] h-44 text-black rounded-md p-4">
-              I enjoy playing games, baking and gardening! Right now I'm playing
-              Baldur's Gate 3 which has been fun, but very long. My favourite
-              food that I make is chili oil pasta, or a nice loaf of challah. My
-              favourite flower is currently snapdragon because of the name and
-              how cool it looks!
+            <div
+              class="bg-[#d8737f67] h-44 text-black rounded-md p-4 object-scale-down"
+            >
+              1. Gardening <br />
+              2. Baking <br />
+              3. Gaming <br />
             </div>
             <h3 class="text-lg font-semibold text-gray-500 mt-2">
               What are my <span class="text-gray-700">Hobbies?</span>
@@ -58,11 +58,8 @@
           </div>
           <div>
             <div class="bg-[#d8737f67] h-44 rounded-md text-black p-4">
-              I really like learning about the sciene of baking. Why do you let
-              your bread cool after baking? Why do you use solid fats over room
-              temperatrue fats? I enjoyed learning about being an intermediary
-              and what that means for people in the digital creative industries.
-              I enjoy learning about nature, especially animals.
+              1. The science of baking <br />
+              2. Intermediaries's responsiblities <br />
             </div>
             <h3 class="text-lg font-semibold text-gray-500 mt-2">
               What are my <span class="text-gray-700">Interests?</span>
@@ -70,11 +67,8 @@
           </div>
           <div>
             <div class="bg-[#d8737f67] h-44 rounded-md text-black p-4">
-              On one hand I would like to become more confident in my skills,
-              and refine it more, and on the other hand I would like to use the
-              internship to see what my opportunities are like in the industry
-              (which is a vague way of saying that I want to find a
-              project/job/company that excites me).
+              1. Refine my skills <br />
+              2. Network and find out about projects that excite me <br />
             </div>
             <h3 class="text-lg font-semibold text-gray-500 mt-2">
               What are my <span class="text-gray-700">Goals?</span>
