--- a/src/about.html
+++ b/src/about.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About</title>
     <link href="/dist/output.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
-  <body class="bg-[#F8F9FF]">
+  <body class="bg-gradient-to-t from-blue-100 to-pink-100 via-purple-100">
     <header>
       <nav class="p-6">
         <div class="flex justify-center items-center">
@@ -23,9 +24,14 @@
       </nav>
       <!-- Section Hero -->
       <div
-        class="container mx-auto bg-[url(../assets/wp.png)] h-96 rounded-md flex items-center"
+        class="container mx-auto bg-blue-300 h-96 rounded-md flex items-center border-solid border-black"
       >
-        <div class="sm:ml-20 text-gray-50 text-center sm:text-left text-left">
+        <div
+          data-aos="fade-in"
+          data-aos-delay="100"
+          data-aos-duration="1000"
+          class="sm:ml-20 text-white text-center sm:text-left object-scale-down scale-100 hover:scale-105 ease-in duration-100"
+        >
           <h1 class="text-5xl font-bold mb-4">
             Jessica <br />
             Hon
@@ -46,18 +52,29 @@
         <div class="grid sm:grid-cols-3 gap-4 grid-cols-2">
           <div>
             <div
-              class="bg-[#d8737f67] h-44 text-black rounded-md p-4 object-scale-down"
+              data-aos="flip-left"
+              data-aos-delay="100"
+              data-aos-duration="1000"
+              class="bg-fuchsia-200 h-44 text-black rounded-md p-4 object-scale-down scale-100 hover:scale-105 ease-in duration-100"
             >
               1. Gardening <br />
               2. Baking <br />
               3. Gaming <br />
             </div>
             <h3 class="text-lg font-semibold text-gray-500 mt-2">
-              What are my <span class="text-gray-700">Hobbies?</span>
+              What are my
+              <span class="text-lg font-semibold text-gray-700 mt-2"
+                >Hobbies?</span
+              >
             </h3>
           </div>
           <div>
-            <div class="bg-[#d8737f67] h-44 rounded-md text-black p-4">
+            <div
+              data-aos="flip-up"
+              data-aos-delay="300"
+              data-aos-duration="1000"
+              class="bg-fuchsia-200 h-44 rounded-md text-black p-4 object-scale-down scale-100 hover:scale-105 ease-in duration-100"
+            >
               1. The science of baking <br />
               2. Intermediaries's responsiblities <br />
             </div>
@@ -66,7 +83,12 @@
             </h3>
           </div>
           <div>
-            <div class="bg-[#d8737f67] h-44 rounded-md text-black p-4">
+            <div
+              data-aos="flip-right"
+              data-aos-delay="200"
+              data-aos-duration="1000"
+              class="bg-fuchsia-200 h-44 rounded-md text-black p-4 object-scale-down scale-100 hover:scale-105 ease-in duration-100"
+            >
               1. Refine my skills <br />
               2. Network and find out about projects that excite me <br />
             </div>
@@ -80,10 +102,14 @@
 
     <!-- component -->
 
-    <div class="bg-[#475c7a]">
+    <div class="bg-black">
       <div class="ml-10 text-white py-10">
         <div class="text-left">
-          <h3 class="text-3xl mb-1">Connect with me</h3>
+          <h3
+            class="text-3xl mb-1 font-bold text-transparent bg-clip-text bg-gradient-to-br from-blue-500 to-pink-500 via-purple-500"
+          >
+            Connect with me
+          </h3>
 
           <div class="text-left my-10">
             <div class="flex items-center">
@@ -92,7 +118,7 @@
                   <a
                     href="https://github.com/Draculoaf"
                     target="_blank"
-                    class="text-white hover:text-gray-00"
+                    class="text-white hover:text-gray-300"
                     >GitHub</a
                   >
                 </li>
@@ -100,7 +126,7 @@
                   <a
                     href="https://draculoaf.itch.io/"
                     target="_blank"
-                    class="text-white hover:text-gray-1300"
+                    class="text-white hover:text-gray-300"
                     >LinkedIn</a
                   >
                 </li>
@@ -118,5 +144,10 @@
         </div>
       </div>
     </div>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
