Card flipping fix

--- a/src/about.html
+++ b/src/about.html
@@ -27,10 +27,10 @@
         class="container mx-auto bg-blue-300 h-96 rounded-md flex items-center border-solid border-black"
       >
         <div
-          data-aos="fade-in"
-          data-aos-delay="100"
-          data-aos-duration="1000"
-          class="sm:ml-20 text-white text-center sm:text-left object-scale-down scale-100 hover:scale-105 ease-in duration-100"
+          data-aos="fade-up"
+          data-aos-delay="1000"
+          data-aos-duration="2000"
+          class="sm:ml-20 text-white text-center sm:text-left"
         >
           <h1 class="text-5xl font-bold mb-4">
             Jessica <br />
@@ -52,9 +52,6 @@
         <div class="grid sm:grid-cols-3 gap-4 grid-cols-2">
           <div>
             <div
-              data-aos="flip-left"
-              data-aos-delay="100"
-              data-aos-duration="1000"
               class="bg-fuchsia-200 h-44 text-black rounded-md p-4 object-scale-down scale-100 hover:scale-105 ease-in duration-100"
             >
               1. Gardening <br />
@@ -70,9 +67,6 @@
           </div>
           <div>
             <div
-              data-aos="flip-up"
-              data-aos-delay="300"
-              data-aos-duration="1000"
               class="bg-fuchsia-200 h-44 rounded-md text-black p-4 object-scale-down scale-100 hover:scale-105 ease-in duration-100"
             >
               1. The science of baking <br />
@@ -84,9 +78,6 @@
           </div>
           <div>
             <div
-              data-aos="flip-right"
-              data-aos-delay="200"
-              data-aos-duration="1000"
               class="bg-fuchsia-200 h-44 rounded-md text-black p-4 object-scale-down scale-100 hover:scale-105 ease-in duration-100"
             >
               1. Refine my skills <br />
